--- a/тексты для баннеров/instagram-subscribe.html
+++ b/тексты для баннеров/instagram-subscribe.html
@@ -1,14 +1,23 @@
 <div class="slideshow__descr slideshow__descr_3">
-    <div class="slideshow__button slideshow__button_3">
-        <a href="https://www.instagram.com/iam.toko/?igshid=hitokqv725wz">
+    <div class="slideshow__button">
+        <a href="https://www.instagram.com/iam.toko/?igshid=hitokqv725wz" class="slideshow__btn slideshow__btn_4 btn" data-hover="hover-on-link" rel="nofollow" target="_blank">
             <svg class="icon" viewBox="0 0 25 25" width="25" height="25">
             <use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="image\sprite.svg#icon-instagram"></use>
         </svg> @iam.toko
         </a>
+    </div>
+    <div class="slideshow__title slideshow__title_5">10% скидка всем подписчикам</div>
+    <div class="slideshow__new slideshow__new_3">Узнавай первой о наших Акциях и Новинках <br>Присоединяйся к @iam.toko</div>
+</div>
 
+<div class="slideshow__descr slideshow__descr_3">
+    <div class="slideshow__button">
+        <a href="https://www.instagram.com/iam.toko/?igshid=hitokqv725wz" class="slideshow__btn slideshow__btn_4 btn" data-hover="hover-on-link" rel="nofollow" target="_blank">
+            <svg class="icon" viewBox="0 0 25 25" width="25" height="25">
+            <use xmlns:xlink="https://www.w3.org/1999/xlink" xlink:href="image\sprite.svg#icon-instagram"></use>
+        </svg> @iam.toko
+        </a>
     </div>
-    <div class="slideshow__new slideshow__new_2">Little thing for student ...</div>
-    <div class="slideshow__button slideshow__button_2">
-        <div class="slideshow__btn slideshow__btn_2 slideshow__btn_3 btn">Смотреть</div>
-    </div>
+    <div class="slideshow__title slideshow__title_5">10% знижка всім підписникам</div>
+    <div class="slideshow__new slideshow__new_3">Дізнавайся першою про наших акціях і Новинках <br>Приєднуйся до @iam.toko</div>
 </div>
