--- a/тексты для баннеров/bannerhom.html
+++ b/тексты для баннеров/bannerhom.html
@@ -1,6 +1,6 @@
 <div class="bannerhom__descr">
-    <h2 class="bannerhom__title">Купи куртку</h2>
-    <div class="bannerhom__text">не мёрзни :)</div>
+    <h2 class="bannerhom__title title">Купи куртку</h2>
+    <div class="bannerhom__subtitle subtitle">не мёрзни :)</div>
     <div class="bannerhom__button">
         <a href="#" class="banner-button bannerhom__btn btn" data-class="home_is_visible" data-hover="hover-on-link">Смотреть</a>
     </div>
@@ -8,16 +8,16 @@
 
 
 <div class="bannerhom__descr">
-    <h2 class="bannerhom__title">Выбери свой стиль</h2>
-    <div class="bannerhom__text">Да, ты крутая, детка :)</div>
+    <h2 class="bannerhom__title title">Выбери свой стиль</h2>
+    <div class="bannerhom__subtitle subtitle">Да, ты крутая, детка :)</div>
     <div class="bannerhom__button">
         <a href="#" class="banner-button bannerhom__btn btn" data-class="home_is_visible" data-hover="hover-on-link">Смотреть</a>
     </div>
 </div>
 
 <div class="bannerhom__descr">
-    <h2 class="bannerhom__title">Купи куртку</h2>
-    <div class="bannerhom__text">не мерзни :)</div>
+    <h2 class="bannerhom__title title">Купи куртку</h2>
+    <div class="bannerhom__subtitle subtitle">не мерзни :)</div>
     <div class="bannerhom__button">
         <a href="#" class="banner-button bannerhom__btn btn" data-class="home_is_visible" data-hover="hover-on-link">Дивитись</a>
     </div>
@@ -25,8 +25,8 @@
 
 
 <div class="bannerhom__descr">
-    <h2 class="bannerhom__title">Обери свій стиль</h2>
-    <div class="bannerhom__text">Так, ти крута, краля :)</div>
+    <h2 class="bannerhom__title title">Обери свій стиль</h2>
+    <div class="bannerhom__subtitle subtitle">Так, ти крута, краля :)</div>
     <div class="bannerhom__button">
         <a href="#" class="banner-button bannerhom__btn btn" data-class="home_is_visible" data-hover="hover-on-link">Дивитись</a>
     </div>
